--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
    <h2>kono somossa nai</h2> 
+   <img width="400px" src="iMages/neww.jpg"alt="">
+   <img width="400px" src="iMages/rejon.png"alt="">
 </body>
 </html>
